weiwei task6 fixed

--- a/xiaowei/6-NewsPaper/index.css
+++ b/xiaowei/6-NewsPaper/index.css
@@ -46,17 +46,19 @@ img{
 	position: relative;
 	float: left;
 }
-.top .imgs div{
+.top .imgs::before{
+	content: "";
 	width: 191px;
 	height: 301px;
-}
-.imgs .left{
 	background-color: rgba(66, 140, 95, 0.5);
 	position: absolute;
 	top: 0;
 	left: 0;
 }
-.imgs .right{
+.top .imgs::after{
+	content: "";
+	width: 191px;
+	height: 301px;
 	background-color: rgba(204, 118, 128, 0.5);
 	position: absolute;
 	top: 0;
@@ -266,6 +268,21 @@ img{
 	overflow:hidden; 
 	margin-bottom: 16px;
 }
+.bottom .down p::before{
+	content: "";
+	width:0px;
+	height:0px;
+	border-width: 0 4px 8px 4px;
+	border-style: solid;
+    border-color: transparent transparent #000 transparent ;
+    font-size: 0px;/*为什么要设置为0呢，真心不懂*/
+    bottom: -57px;
+    float: left;
+    margin-top: 10px;
+    margin-right: 6px;
+}
+
+
 .bottom .down i{
 	font-size: 12px;
 	position: absolute;
